documentation/modules/ROOT/examples/gateways.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: back-golang
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
      - back-golang-<user_namespace>.<openshift_apps_domain>
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: front-javascript
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
      - front-javascript-<user_namespace>.<openshift_apps_domain>
