documentation/modules/ROOT/examples/destinationrules.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: back-golang
spec:
  host: back-golang.<user_namespace>.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: back-python
spec:
  host: back-python.<user_namespace>.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: back-springboot
spec:
  host: back-springboot.<user_namespace>.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: front-javascript
spec:
  host: front-javascript.<user_namespace>.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
