documentation/modules/ROOT/examples/serviceentries-additional.yml
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: external-svc-dns
spec:
  hosts:
  - www.google.es
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  endpoints:
  - address: front-javascript-<user_namespace>.<openshift_apps_domain>
    ports:
      https: 443
